--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,15 +32,15 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws_session_token: ${{ env.AWS_SESSION_TOKEN }}
         aws-region: ${{ env.AWS_REGION }}
 
     # 4. Configurar variáveis de ambiente para o Terraform (dados sensíveis)
     - name: Set Terraform Environment Variables
       env:
-        TF_VAR_db_username: ${{ secrets.DB_USERNAME }}
+        TF_VAR_db_username: ${{ env.DB_USERNAME }}
         TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
 
     # 5. Verificar formatação do Terraform
